--- a/index.html
+++ b/index.html
@@ -2,26 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page</title>
+    <title>Programs</title>
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Download</a></li>
-            <li><a href="">Report</a></li>
+        <ul id="frank">
+            <li><a href="index.html">主页</a></li>
+            <li><a href="programs.html">小程序</a></li>
+            <li><a href="download.html">下载</a></li>
+            <li><a href="feedback.html">反馈</a></li>
         </ul>
     </header>
     <section>
-        <div>
-            section
+        <div class="fd">
+            C
+        </div>
+        <br/>
+        <div class="fd">
+            C语言是一门面向过程、抽象化的通用程序设计语言，广泛应用于底层开发。<br/>
+            C语言能以简易的方式编译、处理低级存储器。C语言是仅产生少量的机器语言以及不需要任何运行环境支持便能运行的高效率程序设计语言。<br/>
+            尽管C语言提供了许多低级处理的功能，但仍然保持着跨平台的特性，以一个标准规格写出的C语言程序可在包括一些类似嵌入式处理器以及超级计算机等作业平台的许多计算机平台上进行编译。
+        </div>
+        <br/>
+        <div class="fd">
+            Python
+        </div>
+        <br/>
+        <div class="fd">
+            Python是一种计算机程序设计语言，是一种面向对象的动态类型语言，最初被设计用于编写自动化脚本(shell)。<br/>
+            随着版本的不断更新和语言新功能的添加，越来越多被用于独立的、大型项目的开发。
         </div>
     </section>
     <br/>
     <footer>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <div>
-            footer
+            联系我们:123456789
         </div>
     </footer>
 </body>
