--- a/download.html
+++ b/download.html
@@ -7,20 +7,21 @@
 </head>
 <body>
 <header>
-    <ul id="frank">
-        <li><a href="index.html">主页</a></li>
-        <li><a href="programs.html">小程序</a></li>
-        <li><a href="download.html">下载</a></li>
-        <li><a href="feedback.html">反馈</a></li>
+    <ul class="dh">
+        <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
+        <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
+        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+        <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
+        <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
     </ul>
 </header>
     <section>
         <h1 style="text-align: center">Python</h1>
-        <ul>
+        <ul style="padding-left: 3%">
             <li>
-                <h3>翻译.exe</h3>
+                <h3>翻译</h3>
                 <p>爬虫和tkinter的结合,内置了有道翻译和金山词霸</p>
-                <a href="翻译.exe" class="download">
+                <a href="download/翻译.zip" class="download">
                     <span>下载</span>
                     <span>for Windows</span>
                 </a>
