--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <title>Programs</title>
     <link rel="stylesheet" href="style1.css">
+    <style>
+        body {
+            background-image: url("img/bg.jpg");
+        }
+    </style>
 </head>
 <body>
     <header>
-        <ul id="frank">
-            <li><a href="index.html">主页</a></li>
-            <li><a href="programs.html">小程序</a></li>
-            <li><a href="download.html">下载</a></li>
-            <li><a href="feedback.html">反馈</a></li>
+        <ul class="dh">
+            <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
+            <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
+            &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+            <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
+            <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
         </ul>
     </header>
-    <section>
+    <section style="margin-left: 2%;">
         <div class="fd">
             C
         </div>
@@ -56,7 +62,10 @@
         <br/>
         <br/>
         <br/>
-        <div>
+        <br/>
+        <br/>
+        <br/>
+        <div style="color:white;">
             联系我们:123456789
         </div>
     </footer>
