--- a/programs.html
+++ b/programs.html
@@ -5,19 +5,21 @@
     <title>小程序</title>
     <link rel="stylesheet" href="style1.css">
     <script src="zs.js"></script>
+    <noscript><p style="font-size: 150%">警告:检测到您的浏览器关闭了JavaScript,部分功能可能无法正常使用!</p></noscript>
 </head>
 <body>
 <header>
-    <ul id="frank">
-        <li><a href="index.html">主页</a></li>
-        <li><a href="programs.html">小程序</a></li>
-        <li><a href="download.html">下载</a></li>
-        <li><a href="feedback.html">反馈</a></li>
+    <ul class="dh">
+        <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
+        <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
+        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+        <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
+        <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
     </ul>
 </header>
 <section>
     <h2>质数判断</h2>
-    <form name="zs" onsubmit="return zspd()">
+    <form name="zs" onsubmit="return zspd()" method="get">
         <label>
             <input type="number" name="zssr">
         </label>
