--- a/feedback.html
+++ b/feedback.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>feedback</title>
     <link rel="stylesheet" href="style1.css">
+    <style>
+        body {
+            background-image: url("img/bg.jpg");
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -16,7 +21,7 @@
     </ul>
 </header>
 <section>
-    <h4>什么问题都没有,还要反馈什么!</h4>
+    <h2>Coming Soon!</h2>
 </section>
 </body>
 </html>
