--- a/programs.html
+++ b/programs.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style1.css">
     <script src="zs.js"></script>
     <noscript><p style="font-size: 150%">警告:检测到您的浏览器关闭了JavaScript,部分功能可能无法正常使用!</p></noscript>
+    <style>
+        body {
+            background-image: url("img/bg.jpg");
+        }
+    </style>
 </head>
 <body>
 <header>
