--- a/feedback.html
+++ b/feedback.html
@@ -13,11 +13,10 @@
 <body>
 <header>
     <ul class="dh">
-        <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
-        <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
-        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-        <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
-        <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
+        <li class="dh"><a href="index.html" >主页</a></li>
+        <li class="dh"><a href="programs.html" >小程序</a></li>
+        <li class="dh"><a href="download.html" >下载</a></li>
+        <li class="dh"><a href="feedback.html" >反馈</a></li>
     </ul>
 </header>
 <section>
