--- a/download.html
+++ b/download.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8">
     <title>Download</title>
     <link rel="stylesheet" href="style1.css">
+    <style>
+        .python {
+            background-image: url("img/Python.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+
+        }
+        .C {
+            background-image: url("img/C.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 35%;
+        }
+    </style>
 </head>
 <body>
 <header>
     <ul class="dh">
-        <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
-        <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
-        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-        <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
-        <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
+        <li class="dh"><a href="index.html" >主页</a></li>
+        <li class="dh"><a href="programs.html" >小程序</a></li>
+        <li class="dh"><a href="download.html" >下载</a></li>
+        <li class="dh"><a href="feedback.html" >反馈</a></li>
     </ul>
 </header>
     <section>
         <h1 style="text-align: center">Python</h1>
-        <ul style="padding-left: 3%">
+        <ul style="padding-left: 3%" class="python">
             <li>
                 <h3>翻译</h3>
                 <p>爬虫和tkinter的结合,内置了有道翻译和金山词霸</p>
@@ -25,9 +38,25 @@
                     <span>下载</span>
                     <span>for Windows</span>
                 </a>
+                <br/>
             </li>
+            <li>
+                <h3>质数判断</h3>
+                <p>帮助你判断质数<p>
+            </li>
+
         </ul>
         <h1 style="text-align: center">C</h1>
+        <ul style="padding-left: 3%" class="C">
+            <li>
+                <h4>屏幕溶解</h4>
+                <p>可以恶搞朋友</p>
+                <a href="zs.js" class="download">下载 for Linux(似乎弄错了)</a>
+            </li>
+            <li>
+
+            </li>
+        </ul>
     </section>
 </body>
 </html>
