--- a/programs.html
+++ b/programs.html
@@ -10,6 +10,9 @@
         body {
             background-image: url("img/bg.jpg");
         }
+        section {
+            margin-left: 2%;
+        }
     </style>
 </head>
 <body>
