--- a/programs.html
+++ b/programs.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta name="author" content="wlys">
     <title>小程序</title>
     <link rel="stylesheet" href="style1.css">
     <script src="zs.js"></script>
