--- a/feedback.html
+++ b/feedback.html
@@ -9,6 +9,7 @@
     <style>
         body {
             background-image: url("img/bg.jpg");
+            background-repeat: no-repeat;
         }
     </style>
 </head>
