--- a/programs.html
+++ b/programs.html
@@ -11,6 +11,7 @@
     <style>
         body {
             background-image: url("img/bg.jpg");
+            background-repeat: no-repeat;
         }
         section {
             margin-left: 2%;
