--- a/download.html
+++ b/download.html
@@ -11,6 +11,7 @@
             background-image: url("img/Python.jpg");
             background-repeat: no-repeat;
             background-position: center;
+            background-size: 15%;
 
         }
         .C {
