--- a/download.html
+++ b/download.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
@@ -7,7 +7,7 @@
     <title>Download</title>
     <link rel="stylesheet" href="style1.css">
     <style>
-        .python {
+        /*.python {
             background-image: url("img/Python.jpg");
             background-repeat: no-repeat;
             background-position: center;
@@ -20,6 +20,7 @@
             background-position: center;
             background-size: 35%;
         }
+        */
     </style>
 </head>
 <body>
@@ -44,10 +45,14 @@
                 <br/>
             </li>
             <li>
-                <h3>质数判断</h3>
-                <p>帮助你判断质数<p>
+                <h3>真可爱</h3>
+                <p>xswl<p>
+                <a href="download/真可爱.zip" class="download">
+                    <span>下载</span>
+                    <span>for Windows</span>
+                    <span>(x64)</span>
+                </a>
             </li>
-
         </ul>
         <h1 style="text-align: center">C</h1>
         <ul style="padding-left: 3%" class="C">
