--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title>Programs</title>
+    <title>wlys—Programs</title>
     <link rel="stylesheet" href="style1.css">
     <style>
         body {
