--- a/download.html
+++ b/download.html
@@ -59,7 +59,7 @@
             <li>
                 <h4>屏幕溶解</h4>
                 <p>可以恶搞朋友</p>
-                <a href="zs.js" class="download">下载 for Linux(似乎弄错了)</a>
+                <a href="PMRJx64.zip" class="download">下载 for Windows</a>
             </li>
             <li>
 
