--- a/download.html
+++ b/download.html
@@ -59,7 +59,8 @@
             <li>
                 <h4>屏幕溶解</h4>
                 <p>可以恶搞朋友</p>
-                <a href="download/PMRJx64.zip" class="download">下载 for Windows</a>
+                <a href="download/PMRJx64.zip" class="download">下载 for Windows(x64)</a>
+                <a href="download/PMRJx32.zip" class="download">下载 for Windows(x32)</a>
             </li>
             <li>
 
