--- a/download.html
+++ b/download.html
@@ -63,7 +63,8 @@
                 <a href="download/PMRJx32.zip" class="download">下载 for Windows(x32)</a>
             </li>
             <li>
-
+                <h4>gpedit</h4>
+                <a href="download/家庭版开启gpedit.zip" class="download">下载 for Windows(x64)</a>
             </li>
         </ul>
     </section>
