--- a/download.html
+++ b/download.html
@@ -64,7 +64,7 @@
             </li>
             <li>
                 <h4>gpedit</h4>
-                <a href="download/家庭版开启gpedit.zip" class="download">下载 for Windows(x64)</a>
+                <a href="download/家庭版开启gpedit.zip" class="download">下载 for Windows</a>
             </li>
         </ul>
     </section>
