--- a/download.html
+++ b/download.html
@@ -48,10 +48,18 @@
                 <h3>真可爱</h3>
                 <p>xswl<p>
                 <a href="download/真可爱.zip" class="download">
-                    <span>下载</span>
+                    <span>下载 2.3</span>
                     <span>for Windows</span>
                     <span>(x64)</span>
                 </a>
+            </li>
+            <li>
+            <h3>二维码生成器</h3>
+            <p>无需联网<p>
+            <a href="download/QR.zip" class="download">
+                <span>下载</span>
+                <span>2.0 for Windows</span>
+            </a>
             </li>
         </ul>
         <h1 style="text-align: center">C</h1>
@@ -59,12 +67,11 @@
             <li>
                 <h4>屏幕溶解</h4>
                 <p>可以恶搞朋友</p>
-                <a href="download/PMRJx64.zip" class="download">下载 for Windows(x64)</a>
-                <a href="download/PMRJx32.zip" class="download">下载 for Windows(x32)</a>
+                <a href="download/PMRJx64.zip" class="download">下载 1.0 for Windows(x64)</a>
+                <a href="download/PMRJx32.zip" class="download">下载 1.0 for Windows(x32)</a>
             </li>
             <li>
-                <h4>gpedit</h4>
-                <a href="download/家庭版开启gpedit.zip" class="download">下载 for Windows</a>
+
             </li>
         </ul>
     </section>
