--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             background-repeat: no-repeat;
         }
     </style>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+	<script src="MerryChristmas.js"></script>
 </head>
 <body>
     <header>
