--- a/download.html
+++ b/download.html
@@ -22,6 +22,8 @@
         }
         */
     </style>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+	<script src="MerryChristmas.js"></script>
 </head>
 <body>
 <header>
