--- a/programs.html
+++ b/programs.html
@@ -17,6 +17,8 @@
             margin-left: 2%;
         }
     </style>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+	<script src="MerryChristmas.js"></script>
 </head>
 <body>
 <header>
