--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-repeat: no-repeat;
         }
     </style>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 	<script src="MerryChristmas.js"></script>
 </head>
 <body>
