--- a/download.html
+++ b/download.html
@@ -22,7 +22,7 @@
         }
         */
     </style>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 	<script src="MerryChristmas.js"></script>
 </head>
 <body>
