--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             background-repeat: no-repeat;
         }
     </style>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
-	<script src="MerryChristmas.js"></script>
+    <script src="jquery-3.4.1.js"></script>
+    <script src="MerryChristmas.js"></script>
 </head>
 <body>
     <header>
@@ -47,31 +47,6 @@
     </section>
     <br/>
     <footer>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <div style="color:white;">
-            联系我们:123456789
-        </div>
     </footer>
 </body>
 </html>
