--- a/download.html
+++ b/download.html
@@ -22,8 +22,8 @@
         }
         */
     </style>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
-	<script src="MerryChristmas.js"></script>
+    <script src="jquery-3.4.1.js"></script>
+    <script src="MerryChristmas.js"></script>
 </head>
 <body>
 <header>
