--- a/feedback.html
+++ b/feedback.html
@@ -12,6 +12,8 @@
             background-repeat: no-repeat;
         }
     </style>
+    <script src="jquery-3.4.1.js"></script>
+    <script src="MerryChristmas.js"></script>
 </head>
 <body>
 <header>
