--- a/download.html
+++ b/download.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title>Download</title>
-    <link rel="stylesheet" href="style1.css">
+    <title>wlys—下载</title>
+    <link rel="stylesheet" href="css/style1.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <style>
         /*.python {
             background-image: url("img/Python.jpg");
@@ -22,8 +23,9 @@
         }
         */
     </style>
-    <script src="jquery-3.4.1.js"></script>
-    <script src="MerryChristmas.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/MerryChristmas.js"></script>
+    <script src="js/Eggs.js"></script>
 </head>
 <body>
 <header>
