--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
     <title>wlys—Programs</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="css/style1.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <style>
         body {
             background-image: url("img/bg.jpg");
             background-repeat: no-repeat;
         }
     </style>
-    <script src="jquery-3.4.1.js"></script>
-    <script src="MerryChristmas.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/MerryChristmas.js"></script>
+    <script src="js/Eggs.js"></script>
 </head>
 <body>
     <header>
         <ul class="dh">
-            <li class="dh"><a href="index.html"  style="color: red">主页</a></li>
+            <li class="dh"><a href="#" onclick="document.getElementById('egg').className = 'dh'" style="color: red">主页</a></li>
             <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
-            <li></li>
+            <li class="hide" id="egg"><a href="#" onclick="open(location, '_self').close();">Egg</a></li>
             <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
             <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
         </ul>
@@ -45,7 +47,6 @@
             随着版本的不断更新和语言新功能的添加，越来越多被用于独立的、大型项目的开发。
         </div>
     </section>
-    <br/>
     <footer>
     </footer>
 </body>
