--- a/programs.html
+++ b/programs.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title>小程序</title>
-    <link rel="stylesheet" href="style1.css">
+    <title>wlys—小程序</title>
+    <link rel="stylesheet" href="css/style1.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <noscript><p style="font-size: 150%">警告:检测到您的浏览器关闭了JavaScript,部分功能可能无法正常使用!</p></noscript>
     <style>
         body {
@@ -16,8 +17,9 @@
             margin-left: 2%;
         }
     </style>
-    <script src="jquery-3.4.1.js"></script>
-    <script src="MerryChristmas.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/MerryChristmas.js"></script>
+    <script src="js/Eggs.js"></script>
 </head>
 <body>
 <header>
@@ -29,12 +31,12 @@
     </ul>
 </header>
 <section>
-    <h4 class="fd">质数判断:</h4>
+    <h4 class="bold">质数判断:</h4>
     <p class="bold">
         <input type="number" id="zssr">
     </p>
     <p class="fd" id="zsjg">结果:</p>
 </section>
-<script src="program.js"></script>
+<script src="js/program.js"></script>
 </body>
 </html>
