--- a/download.html
+++ b/download.html
@@ -8,20 +8,19 @@
     <link rel="stylesheet" href="css/style1.css">
     <link rel="shortcut icon" href="img/favicon.ico">
     <style>
-        /*.python {
+        .python {
             background-image: url("img/Python.jpg");
             background-repeat: no-repeat;
             background-position: center;
             background-size: 15%;
 
         }
-        .C {
+        /*.C {
             background-image: url("img/C.jpg");
             background-repeat: no-repeat;
             background-position: center;
             background-size: 35%;
-        }
-        */
+        }*/
     </style>
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/MerryChristmas.js"></script>
@@ -32,7 +31,7 @@
     <ul class="dh">
         <li class="dh"><a href="index.html" >主页</a></li>
         <li class="dh"><a href="programs.html" >小程序</a></li>
-        <li class="dh"><a href="download.html" >下载</a></li>
+        <li class="dh"><a href="#" >下载</a></li>
         <li class="dh"><a href="feedback.html" >反馈</a></li>
     </ul>
 </header>
@@ -41,21 +40,12 @@
         <ul style="padding-left: 3%" class="python">
             <li>
                 <h3>翻译</h3>
-                <p>爬虫和tkinter的结合,内置了有道翻译和金山词霸</p>
+                <p>四种翻译</p>
                 <a href="download/翻译.zip" class="download">
                     <span>下载</span>
                     <span>for Windows</span>
                 </a>
                 <br/>
-            </li>
-            <li>
-                <h3>真可爱</h3>
-                <p>xswl<p>
-                <a href="download/真可爱.zip" class="download">
-                    <span>下载 2.3</span>
-                    <span>for Windows</span>
-                    <span>(x64)</span>
-                </a>
             </li>
             <li>
             <h3>二维码生成器</h3>
@@ -65,17 +55,19 @@
                 <span>2.0 for Windows</span>
             </a>
             </li>
+            <li>
+                <h3>真..可..爱..?(病毒)</h3>
+                <a href="download/真可爱.zip" class="download">下载 2.3 for Windows(x64)</a>
+                <a href="download/真可爱2.zip" class="download">下载 5.6 for Windows</a>
+            </li>
         </ul>
         <h1 style="text-align: center">C</h1>
         <ul style="padding-left: 3%" class="C">
             <li>
                 <h4>屏幕溶解</h4>
-                <p>可以恶搞朋友</p>
+                <p>无害</p>
                 <a href="download/PMRJx64.zip" class="download">下载 1.0 for Windows(x64)</a>
                 <a href="download/PMRJx32.zip" class="download">下载 1.0 for Windows(x32)</a>
-            </li>
-            <li>
-
             </li>
         </ul>
     </section>
