--- a/feedback.html
+++ b/feedback.html
@@ -26,7 +26,7 @@
         <li class="dh"><a href="index.html" >主页</a></li>
         <li class="dh"><a href="programs.html" >小程序</a></li>
         <li class="dh"><a href="download.html" >下载</a></li>
-        <li class="dh"><a href="feedback.html" >视频</a></li>
+        <li class="dh"><a href="#" >视频</a></li>
     </ul>
 </header>
 <section class="">
@@ -35,7 +35,8 @@
         <button id="lastP">上一节</button>
         <button id="nextP">下一节</button>
         <br/>
-        <iframe id="video" src="https://player.bilibili.com/player.html?aid=48489320&cid=84920721&page=1" width="750px" height="500px" frameborder="0" allowfullscreen></iframe>
+        <iframe id="video" src="https://player.bilibili.com/player.html?aid=48489320&cid=84920721&page=1" width="750px" height="500px" frameborder="0" allowfullscreen>抱歉，您的浏览器不支持iframe
+        </iframe>
 </section>
     <script src="js/htmlvideo.js"></script>
 </body>
