--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title>wlys—Programs</title>
+    <title>wlys—index</title>
     <link rel="stylesheet" href="css/style1.css">
     <link rel="shortcut icon" href="img/favicon.ico">
     <style>
@@ -19,13 +19,17 @@
 </head>
 <body>
     <header>
-        <ul class="dh">
-            <li class="dh"><a href="#" onclick="document.getElementById('egg').className = 'dh'" style="color: red">主页</a></li>
-            <li class="dh"><a href="programs.html"  style="color: red">小程序</a></li>
+        <nav>
+        <ul>
+            <li><a href="#" onclick="document.getElementById('egg').className = 'dh'" style="color: red">主页</a></li>
+            <li><a href="programs.html"  style="color: red">小程序</a></li>
             <li class="hide" id="egg"><a href="#" onclick="open(location, '_self').close();">Egg</a></li>
-            <li class="dh"><a href="download.html"  style="color: red">下载</a></li>
-            <li class="dh"><a href="feedback.html"  style="color: red">反馈</a></li>
+            <li class="desktop"><a href="download.html"  style="color: red">下载</a></li>
+            <li class="desktop"><a href="feedback.html"  style="color: red">反馈</a></li>
+            <li class="mobile"><a href="download.html"  style="color: red">下载</a></li>
+            <li class="mobile"><a href="feedback.html"  style="color: red">反馈</a></li>
         </ul>
+        </nav>
     </header>
     <section style="margin-left: 2%;">
         <div class="fd">
