--- a/download.html
+++ b/download.html
@@ -32,7 +32,7 @@
         <li class="dh"><a href="index.html" >主页</a></li>
         <li class="dh"><a href="programs.html" >小程序</a></li>
         <li class="dh"><a href="#" >下载</a></li>
-        <li class="dh"><a href="feedback.html" >反馈</a></li>
+        <li class="dh"><a href="video.html" >视频</a></li>
     </ul>
 </header>
     <section>
