--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
     <header>
         <nav>
         <ul>
-            <li><a href="#" onclick="document.getElementById('egg').className = 'dh'" style="color: red">主页</a></li>
+            <li><a href="#" onclick="document.getElementById('egg').className='dh'" style="color: red">主页</a></li>
             <li><a href="programs.html"  style="color: red">小程序</a></li>
             <li class="hide" id="egg"><a href="#" onclick="open(location, '_self').close();">Egg</a></li>
             <li class="desktop"><a href="download.html"  style="color: red">下载</a></li>
-            <li class="desktop"><a href="feedback.html"  style="color: red">反馈</a></li>
-            <li class="mobile"><a href="download.html"  style="color: red">下载</a></li>
-            <li class="mobile"><a href="feedback.html"  style="color: red">反馈</a></li>
+            <li class="desktop"><a href="video.html" style="color: red">视频</a></li>
         </ul>
         </nav>
     </header>
