--- a/programs.html
+++ b/programs.html
@@ -27,7 +27,7 @@
         <li class="dh"><a href="index.html" >主页</a></li>
         <li class="dh"><a href="#" >小程序</a></li>
         <li class="dh"><a href="download.html" >下载</a></li>
-        <li class="dh"><a href="feedback.html" >反馈</a></li>
+        <li class="dh"><a href="video.html" >视频</a></li>
     </ul>
 </header>
 <section>
@@ -40,7 +40,7 @@
     <input id="qrtext" value="Apples">
     <button id="qrsubmit">生成</button>
     <br/>
-    <iframe src="https://cli.im/api/qrcode/code?text=Apples" width="1000px" height="500px" id="qrwindow"></iframe>
+    <iframe src="https://cli.im/api/qrcode/code?text=Apples" width="1000px" height="500px" id="qrwindow" frameborder="0"></iframe>
 </section>
 <script src="js/program.js"></script>
 </body>
