--- a/video.html
+++ b/video.html
@@ -35,7 +35,7 @@
         <button id="lastP">上一节</button>
         <button id="nextP">下一节</button>
         <br/>
-        <iframe id="video" src="https://player.bilibili.com/player.html?aid=48489320&cid=84920721&page=1" width="750px" height="500px" frameborder="0" allowfullscreen>抱歉，您的浏览器不支持iframe
+        <iframe id="video" src="https://player.bilibili.com/player.html?aid=48489320&cid=84920721&page=1" width="90%" height="600px" frameborder="0" allowfullscreen>抱歉，您的浏览器不支持iframe
         </iframe>
 </section>
     <script src="js/htmlvideo.js"></script>
