--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Python是一种计算机程序设计语言，是一种面向对象的动态类型语言，最初被设计用于编写自动化脚本(shell)。<br/>
             随着版本的不断更新和语言新功能的添加，越来越多被用于独立的、大型项目的开发。
         </div><br/>
-        <h4 class="bold">天气查询:</h4>
+        <h4 class="fd">天气查询:</h4>
         <button id="getweather">查询当前城市天气</button>
         <ul id="weathershow" class="fd"></ul>
     </section>
