--- a/download.html
+++ b/download.html
@@ -60,6 +60,10 @@
                 <a href="download/真可爱.zip" class="download">下载 2.3 for Windows(x64)</a>
                 <a href="download/真可爱2.zip" class="download">下载 5.6 for Windows</a>
             </li>
+            <li>
+                <h3>五   彩   缤   纷(病毒)</h3>
+                <a href="download/五彩缤纷.zip" class="download">下载 ??? for Windows</a>
+            </li>
         </ul>
         <h1 style="text-align: center">C</h1>
         <ul style="padding-left: 3%" class="C">
