--- a/programs.html
+++ b/programs.html
@@ -16,6 +16,20 @@
         section {
             margin-left: 2%;
         }
+        .progress{
+				width: 200px;
+				height: 20px;
+				background: #ddd;
+				position: relative;
+			}
+        .info {
+            width: 0;
+            height: 20px;
+            background: #45ec56;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
     </style>
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/MerryChristmas.js"></script>
@@ -46,6 +60,15 @@
     <button id="fanyisubmit">翻译</button>
     <button id="fanyiclear" onclick="document.getElementById('fanyitext').value='';">清空</button><br/>
     <p id="fanyiresult"></p>
+    <h4 class="bold">病毒检测：(电脑专用)</h4>
+    <input type="file" id="bdfile"><br/>
+    <button id="bdupload" style="margin-top: 5px;">上传文件</button>
+    <div class="progress" style="display: none">
+			<div class="info" id="bdinfo">
+			</div>
+    </div>
+    <div id="bdresult"></div>
+    <iframe src="" style="display: none" width="1200px" height="500px" id="bdshow"></iframe>
 </section>
 <script src="js/program.js"></script>
 </body>
