--- a/programs.html
+++ b/programs.html
@@ -17,18 +17,15 @@
             margin-left: 2%;
         }
         .progress{
-				width: 200px;
-				height: 20px;
-				background: #ddd;
-				position: relative;
+            width:300px;
+            height:30px;
+            border:1px solid #45ec56;
+            margin-top: 7px;
 			}
         .info {
-            width: 0;
-            height: 20px;
-            background: #45ec56;
-            position: absolute;
-            left: 0;
-            top: 0;
+            width:0;
+            height:30px;
+            background:#45ec56;
         }
     </style>
     <script src="js/jquery-3.4.1.js"></script>
