--- a/programs.html
+++ b/programs.html
@@ -57,7 +57,7 @@
     <button id="fanyisubmit">翻译</button>
     <button id="fanyiclear" onclick="document.getElementById('fanyitext').value='';">清空</button><br/>
     <p id="fanyiresult"></p>
-    <h4 class="bold">病毒检测：(电脑专用)</h4>
+    <h4 class="bold">病毒检测：</h4>
     <input type="file" id="bdfile"><br/>
     <button id="bdupload" style="margin-top: 5px;">上传文件</button>
     <div class="progress" style="display: none">
@@ -65,7 +65,7 @@
 			</div>
     </div>
     <div id="bdresult"></div>
-    <iframe src="" style="display: none" width="1200px" height="500px" id="bdshow"></iframe>
+    <iframe src="" style="display: none" width="95%" height="800px" id="bdshow"></iframe>
 </section>
 <script src="js/program.js"></script>
 </body>
