--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
         <ul>
-            <li><a href="#" onclick="document.getElementById('egg').className='dh'" style="color: red">主页</a></li>
+            <li><a href="#" style="color: red" id="eggopener">主页</a></li>
             <li><a href="programs.html"  style="color: red">小程序</a></li>
             <li class="hide" id="egg"><a href="#" onclick="open(location, '_self').close();">Egg</a></li>
             <li class="desktop"><a href="download.html"  style="color: red">下载</a></li>
@@ -62,6 +62,14 @@
     </footer>
     <script>
         $(function () {
+            var p= 0;
+            $("#eggopener").on("click", function () {
+                if (p > 5){
+                    $("#egg").fadeIn(3000);
+                }else{
+                    p++;
+                }
+            });
             var $weathershow = $("#weathershow");
             $weathershow.hide();
             var parameter = {
