--- a/decode.html
+++ b/decode.html
@@ -13,7 +13,8 @@
     function GetQueryString(name) {
         var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
         var r = window.location.search.substr(1).match(reg);
-        if(r!=null)return  unescape(r[2]); return "无内容";
+        if(r != null) return decodeURI(r[2]);
+        return "无内容";
     }
     document.write(GetQueryString("text"))
 </script>
