--- a/download.html
+++ b/download.html
@@ -42,7 +42,7 @@
                 <h3>翻译</h3>
                 <p>四种翻译</p>
                 <a href="download/翻译.zip" class="download">
-                    <span>下载</span>
+                    <span>下载 最新版本</span>
                     <span>for Windows</span>
                 </a>
                 <br/>
@@ -52,7 +52,7 @@
             <p>无需联网<p>
             <a href="download/QR.zip" class="download">
                 <span>下载</span>
-                <span>2.0 for Windows</span>
+                <span>最新版本 for Windows</span>
             </a>
             </li>
             <li>
