--- a/download.html
+++ b/download.html
@@ -56,6 +56,11 @@
             </a>
             </li>
             <li>
+                <h3>冠状病毒实时状况</h3>
+                <p>桌面实时滚动显示, 所有城市查询, 获取最新资讯</p>
+                <a href="download/gzbd.zip" class="download">下载 最新版本 for Windows</a>
+            </li>
+            <li>
                 <h3>真..可..爱..?(病毒)</h3>
                 <a href="download/真可爱.zip" class="download">下载 2.3 for Windows(x64)</a>
                 <a href="download/真可爱2.zip" class="download">下载 5.6 for Windows</a>
@@ -66,12 +71,20 @@
             </li>
         </ul>
         <h1 style="text-align: center">C</h1>
-        <ul style="padding-left: 3%" class="C">
+        <ul style="padding-left: 3%">
             <li>
                 <h4>屏幕溶解</h4>
                 <p>无害</p>
                 <a href="download/PMRJx64.zip" class="download">下载 1.0 for Windows(x64)</a>
                 <a href="download/PMRJx32.zip" class="download">下载 1.0 for Windows(x32)</a>
+            </li>
+        </ul>
+        <h1 style="text-align: center">小工具</h1>
+        <ul style="padding-left: 3%">
+            <li>
+                <h3>开启gpedit</h3>
+                <p>让家庭版Windows10也能使用组策略</p>
+                <a href="download/家庭版开启gpedit.zip" class="download">下载 for Windows10家庭版</a>
             </li>
         </ul>
     </section>
