--- a/setu.html
+++ b/setu.html
@@ -14,7 +14,7 @@
         标签:
         <ul id="tags"></ul>
         <a href="https://api.lolicon.app/#/setu">试用API</a>
-        <img src="" id="show">
+        <img src="" id="show" width="99%" height="99%">
         <script>
             $(function () {
                 var $show = $("#show");
