--- a/setu.html
+++ b/setu.html
@@ -21,7 +21,8 @@
                 var $text = $("#text");
                 var $tags = $("#tags")
                 var parameter = {
-                    r18: 1
+                    r18: 1,
+                    size1200: true
                 }
                 $.ajax({
                     type: "GET",
