--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section style="margin-left: 2%;">
         <div class="fd">
             这是一个wlys的最没用的网站,有一些小程序和原创程序(和病毒)<br/>
-            (由github提供)
+            (由github/gitee提供)
         </div>
         <br/>
         <h4 class="fd">天气查询:</h4>
