--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
     <section style="margin-left: 2%;">
         <div class="fd">
             这是一个wlys的最没用的网站,有一些小程序和原创程序(和病毒)<br/>
-            (由github/gitee提供)
+            (由github/gitee/tempyun提供)
+        </div>
+        <div class="fd">
+            <a href="https://ItsFlicker.github.io/Programs">github页面(网速最慢)</a><br/>
+            <a href="https://ItsFlicker.gitee.io/Programs">gitee页面(同步更新)</a><br/>
+            <a href="http://wlys.tempyun.com">tempyun页面(更新最慢)</a><br/>
+        </div>
+        <div class="fd">
+            <h4>未来计划</h4>
+            <ul>
+                <li>1.内嵌翻墙</li>
+                <li>2.抽象话</li>
+            </ul>
         </div>
         <br/>
         <h4 class="fd">天气查询:</h4>
