--- a/index.html
+++ b/index.html
@@ -4,114 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title>wlys—index</title>
+    <title></title>
     <link rel="stylesheet" href="css/style1.css">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <style>
-        body {
-            background-image: url("img/bg.jpg");
-            background-repeat: no-repeat;
-        }
-    </style>
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/MerryChristmas.js"></script>
-    <script src="js/Eggs.js"></script>
 </head>
 <body>
-    <header>
-        <nav>
-        <ul>
-            <li><a href="#" style="color: red" id="eggopener">主页</a></li>
-            <li><a href="programs.html"  style="color: red">小程序</a></li>
-            <li class="hide" id="egg"><a href="#" onclick="open(location, '_self').close();">Egg</a></li>
-            <li class="desktop"><a href="download.html"  style="color: red">下载</a></li>
-            <li class="desktop"><a href="video.html" style="color: red">视频</a></li>
-        </ul>
-        </nav>
-    </header>
     <section style="margin-left: 2%;">
         <div class="fd">
-            这是一个wlys的最没用的网站,有一些小程序和原创程序(和病毒)<br/>
-            (由github/gitee/tempyun提供)
-        </div>
-        <div class="fd">
-            <a href="https://ItsFlicker.github.io/Programs">github页面(网速最慢)</a><br/>
-            <a href="https://ItsFlicker.gitee.io/Programs">gitee页面(同步更新)</a><br/>
-            <a href="http://wlys.tempyun.com">tempyun页面(更新最慢)</a><br/>
-        </div>
-        <div class="fd">
-            <h4>未来计划</h4>
-            <ul>
-                <li>1.内嵌翻墙</li>
-                <li>2.抽象话</li>
-            </ul>
-        </div>
-        <br/>
-        <h4 class="fd">天气查询:</h4>
-        <button id="getweather">查询当前城市天气</button>
-        <div id="weathershow" style="text-align: center;color: white;">
-            <p id="ws-one" style="font-size: 150%"></p>
-            <p id="ws-two" style="font-size: 100%"></p>
-            <p id="ws-three" style="font-size: 100%"></p><br/>
-            <p id="ws-four" style="margin-top: 5px"></p>
-            <ul id="ws-five" class="fd"></ul>
+            本网站已经迁移到此处 <a href="wlys.pythonanywhere.com">wlysCraft</a></br>
+            
         </div>
     </section>
-    <footer>
-    </footer>
-    <script>
-        $(function () {
-            var p= 0;
-            $("#eggopener").on("click", function () {
-                if (p > 5){
-                    $("#egg").fadeIn(3000);
-                }else{
-                    p++;
-                }
-            });
-            var $weathershow = $("#weathershow");
-            $weathershow.hide();
-            var parameter = {
-                location: 'auto_ip',
-                key: '216168dcbeeb4a9ba1dd70f153ac4463'
-            };
-
-            $("#getweather").on("click", function () {
-                $.ajax({
-                    type: 'GET',
-                    url: 'https://free-api.heweather.net/s6/weather/now',
-                    data: parameter,
-                    success: function (weathern) {
-                        $.ajax({
-                            type: 'GET',
-                            url: 'https://free-api.heweather.net/s6/weather/forecast',
-                            data: parameter,
-                            success: function (weatherf) {
-                                $weathershow.show();
-                                var now = weathern.HeWeather6[0].now;
-                                var forecast = weatherf.HeWeather6[0].daily_forecast;
-                                $("#ws-one").html(now.tmp+"℃");
-                                $("#ws-two").html(forecast[0].tmp_max+"℃/"+forecast[0].tmp_min+"℃");
-                                $("#ws-three").html(now.cond_txt+" 风力"+now.wind_sc+"级");
-                                $("#ws-four").html(weathern.HeWeather6[0].basic.location);
-                                $.each(forecast, function (i, day) {
-                                    $("#ws-five").append("<li>"+day.date+"  "+day.cond_txt_d+"  "+day.tmp_max+"℃/"+day.tmp_min+"℃</li><br/>")
-                                });
-                                $("#getweather").fadeOut();
-                            },
-                            error: function () {
-                                alert("获取失败，请稍后再试");
-                                $("#getweather").fadeOut();
-                            }
-                        });
-                    },
-                    error: function () {
-                        alert("获取失败，请稍后再试");
-                        $("#getweather").fadeOut();
-                    }
-                });
-            });
-        })
-    </script>
 </body>
 </html>
