--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section style="margin-left: 2%;">
-        <div class="fd">
+        <div>
             本网站已经迁移到此处 <a href="wlys.pythonanywhere.com">wlysCraft</a></br>
             
         </div>
