--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta name="author" content="wlys">
-    <title></title>
-    <link rel="stylesheet" href="css/style1.css">
-    <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
     <section style="margin-left: 2%;">
         <div>
-            本网站已经迁移到此处 <a href="wlys.pythonanywhere.com">wlysCraft</a></br>
+            本网站已经迁移到此处 <a href="https://wlys.pythonanywhere.com">wlysCraft</a></br>
             
         </div>
     </section>
