--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section style="margin-left: 2%;">
         <div>
-            本网站已经迁移到此处 <a href="https://wlys.pythonanywhere.com">wlysCraft</a></br>
+            本网站已经迁移到此处 <a href="http://wlys.pythonanywhere.com">wlysCraft</a></br>
             
         </div>
     </section>
