--- a/requestsAPI.html
+++ b/requestsAPI.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <script src="js/jquery-3.4.1.js"></script>
 <head>
     <meta charset="UTF-8">
-    <title>二维码内容</title>
 </head>
 <body>
 </body>
