--- a/requestsAPI.html
+++ b/requestsAPI.html
@@ -19,15 +19,15 @@
     var parameter = GetQueryString("parameter");
 
     if (url == null){
-    	document.write("error")
+    	document.write("error");
     };
 
     if (type == null){
-    	type = "GET"
+    	type = "GET";
     };
 
     if (parameter == null){
-    	parameter = {}
+    	parameter = {};
     };
 
     $(function() {
