--- a/requestsAPI.html
+++ b/requestsAPI.html
@@ -35,6 +35,8 @@
     		type: type,
     		url: url,
     		data: parameter,
+            dataType: "jsonp",
+            jsonpCallBack: "jpcb",
     		success: function (value){
     			document.write(value)
     		},
